manifests/app/zcashd-lwd.yaml
---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: lwd-ingress
#  namespace: zc-testnet
#  annotations:
#    kubernetes.io/ingress.class: alb
#    alb.ingress.kubernetes.io/scheme: internal
#  labels:
#    app: lwd-ingress
#spec:
#  rules:
#    - http:
#        paths:
#          - path: /*
#            backend:
#              serviceName: lwd-service
#              servicePort: 9067
---
apiVersion: v1
kind: Service
metadata:
  name: lwd-service
  namespace: zc-testnet
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
spec:
  ports:
    - name: zcash-lwd
      port: 9067
      targetPort: 9067
      protocol: TCP
  type: LoadBalancer
  selector:
    app: lwd-rest
    tier: midtier
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lwd-ing
  namespace: zc-testnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lwd-ing
      tier: midtier
  template:
    metadata:
      labels:
        app: lwd-ing
        tier: midtier
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: lwd-ing
          image: 183812568438.dkr.ecr.us-east-1.amazonaws.com/zcashd-lwd:v0.0.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: lwd-ing-data
              mountPath: /home/zcash/db
          securityContext:
            runAsUser: 1000
            allowPrivilegeEscalation: false
      volumes:
        - name: lwd-ing-data
          persistentVolumeClaim:
            claimName: lwd-data-pv
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lwd-rest
  namespace: zc-testnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lwd-rest
      tier: midtier
  template:
    metadata:
      labels:
        app: lwd-rest
        tier: midtier
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: lwd-rest
          image: 183812568438.dkr.ecr.us-east-1.amazonaws.com/zcashd-lwd:v0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9067
              name: lwd-port
          volumeMounts:
            - name: lwd-rest-data
              mountPath: /home/zcash/db
          securityContext:
            runAsUser: 1000
            allowPrivilegeEscalation: false
      volumes:
        - name: lwd-rest-data
          persistentVolumeClaim:
            claimName: lwd-data-pv
