manifests/app/zcashd.yaml
---
#kind: PersistentVolumeClaim
#apiVersion: v1
#metadata:
#  name: zcash-params
#spec:
#  storageClassName: aws-efs
#  accessModes:
#    - ReadWriteMany
#  resources:
#    requests:
#      storage: 3G
#---
apiVersion: v1
kind: Service
metadata:
  name: zcashd-service
  namespace: zc-testnet
spec:
  ports:
    - name: zcashd-rpc
      port: 18232
      targetPort: 18232
    - name: zcashd-zmq
      port: 28332
      targetPort: 28332
    - name: zcashd-1wd
      port: 9994
      targetPort: 9994
  selector:
    app: zcashd
    tier: crypto
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zcashd
  namespace: zc-testnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zcashd
      tier: crypto
  template:
    metadata:
      labels:
        app: zcashd
        tier: crypto
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers: 
        - name: zcashd          
          image: 183812568438.dkr.ecr.us-east-1.amazonaws.com/zcashd:v2.0.7
          imagePullPolicy: IfNotPresent
          ports:
            - name: zcashd-rpc
              containerPort: 18232
              protocol: TCP
            - name: zcashd-zmq
              containerPort: 28332
              protocol: TCP
            - name: zcashd-lwd
              containerPort: 9994
              protocol: TCP
          volumeMounts:
            - name: zcash-data
              mountPath: /home/zcash
#            - name: zcash-data
#              mountPath: /home/zcash/.zcash
#            - name: zcash-params
#              mountPath: /home/zcash/.zcash-params
          securityContext:
            allowPrivilegeEscalation: false            
      volumes:
        - name: zcash-data
          persistentVolumeClaim:
            claimName: zcash-data
#        - name: zcash-params
#          persistentVolumeClaim:
#            claimName: zcash-params
