manifests/app/zcash-lwd.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lwd-ingress
  namespace: zcashd-testnet
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
  labels:
    app: lwd-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: lwd-service
              servicePort: 9067
---
apiVersion: v1
kind: Service
metadata:
  name: lwd-service
  namespace: zcashd-testnet
spec:
  ports:
    - name: zcash-lwd
      port: 9067
      targetPort: 9067
      protocol: TCP
  type: NodePort
  selector:
    app: lwd-rest
    tier: midtier
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lwd-ing
  namespace: zcashd-testnet
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: lwd-ing
        tier: midtier
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: lwd-ing
          image: 645036907814.dkr.ecr.us-east-1.amazonaws.com/zcash-lwd:v0.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: lwd-ing-data
              mountPath: /home/zcash/db
          securityContext:
            runAsUser: 1000
            allowPrivilegeEscalation: false
      volumes:
        - name: lwd-ing-data
          persistentVolumeClaim:
            claimName: lwd-data-pv
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lwd-rest
  namespace: zcashd-testnet
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: lwd-rest
        tier: midtier
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: lwd-rest
          image: 645036907814.dkr.ecr.us-east-1.amazonaws.com/zcash-lwd:v0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9067
              name: lwd-port
          volumeMounts:
            - name: lwd-rest-data
              mountPath: /home/zcash/db
          securityContext:
            runAsUser: 1000
            allowPrivilegeEscalation: false
      volumes:
        - name: lwd-rest-data
          persistentVolumeClaim:
            claimName: lwd-data-pv
