manifests/app/zcash-ui.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: zcashd-testnet
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: ui-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: zcash-ui-service
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: zcash-ui-service
  namespace: zcashd-testnet
spec:
  ports:
    - name: zcash-ui
      port: 80
      targetPort: 3001
      protocol: TCP
  type: NodePort
  selector:
    app: zcash-ui
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zcash-ui
  namespace: zcashd-testnet
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: zcash-ui
        tier: frontend
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: zcash-ui
          image: 645036907814.dkr.ecr.us-east-1.amazonaws.com/zcash-ui:v0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: zcash-ui-port
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - name: zcash-ui-data
              mountPath: /home/zcash/.zcash
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: zcash-ui-data
          persistentVolumeClaim:
            claimName: efs
        - name: zcash-ui-params
          persistentVolumeClaim:
            claimName: efs
