manifests/app/zcashd-ui.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: zc-testnet
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: ui-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: zcashd-ui-service
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: zcashd-ui-service
  namespace: zc-testnet
spec:
  ports:
    - name: zcash-ui
      port: 80
      targetPort: 3001
      protocol: TCP
  type: NodePort
  selector:
    app: zcashd-ui
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zcashd-ui
  namespace: zc-testnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zcashd-ui
      tier: frontend
  template:
    metadata:
      labels:
        app: zcashd-ui
        tier: frontend
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: zcash-ui
          image: 183812568438.dkr.ecr.us-east-1.amazonaws.com/zcashd-ui:v0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: zcashd-ui-port
              containerPort: 3001
              protocol: TCP
#          volumeMounts:
#            - name: zcash-ui-data
#              mountPath: /home/zcash/.zcash
          securityContext:
            allowPrivilegeEscalation: false
#      volumes:
#        - name: zcash-ui-data
#          persistentVolumeClaim:
#            claimName: efs
#        - name: zcash-ui-params
#          persistentVolumeClaim:
#            claimName: efs
